# piloting_mavsdk

./: CMakeLists.txt  LICENSE.md  MAVSDKConfig.cmake.in  README.md
examples/: CMakeLists.txt  README.md
examples/piloting_alarm/: CMakeLists.txt  piloting_gcs_alarm_example.cpp  piloting_robot_alarm_example.cpp
examples/piloting_checklist/: CMakeLists.txt  piloting_gcs_checklist_example.cpp  piloting_robot_checklist_example.cpp
examples/piloting_command/: CMakeLists.txt  piloting_gcs_command_example.cpp  piloting_robot_command_example.cpp
examples/piloting_heartbeat/: CMakeLists.txt  piloting_gcs_heartbeat_example.cpp  piloting_robot_heartbeat_example.cpp
examples/piloting_inspection/: CMakeLists.txt  piloting_gcs_inspection_example.cpp  piloting_robot_inspection_example.cpp
examples/piloting_telemetry/: CMakeLists.txt  piloting_gcs_telemetry_example.cpp  piloting_robot_telemetry_example.cpp
src/: CMakeLists.txt
src/cmake/: compiler_flags.cmake
src/core/: CMakeLists.txt  alarm_base.cpp  alarm_base.h  checklist_base.cpp  checklist_base.h  command_base.cpp  command_base.h  hl_action_base.cpp  hl_action_base.h  inspection_base.cpp  inspection_base.h  log.h  mavlink_alarm_transfer.cpp  mavlink_alarm_transfer.h  mavlink_alarm_transfer_ground_station.cpp  mavlink_alarm_transfer_ground_station.h  mavlink_alarm_transfer_robotic_vehicle.cpp  mavlink_alarm_transfer_robotic_vehicle.h  mavlink_checklist_transfer.cpp  mavlink_checklist_transfer.h  mavlink_checklist_transfer_ground_station.cpp  mavlink_checklist_transfer_ground_station.h  mavlink_checklist_transfer_robotic_vehicle.cpp  mavlink_checklist_transfer_robotic_vehicle.h  mavlink_command_transfer.cpp  mavlink_command_transfer.h  mavlink_command_transfer_ground_station.cpp  mavlink_command_transfer_ground_station.h  mavlink_command_transfer_robotic_vehicle.cpp  mavlink_command_transfer_robotic_vehicle.h  mavlink_hl_action_transfer.cpp  mavlink_hl_action_transfer.h  mavlink_hl_action_transfer_ground_station.cpp  mavlink_hl_action_transfer_ground_station.h  mavlink_hl_action_transfer_robotic_vehicle.cpp  mavlink_hl_action_transfer_robotic_vehicle.h  mavlink_include.h  mavlink_inspection_transfer.cpp  mavlink_inspection_transfer.h  mavlink_inspection_transfer_ground_station.cpp  (+16 more)
src/mavlink/include/mavlink/v2.0/: CMakeLists.txt
src/mavlink/include/mavlink/v2.0/common/: common.h  version.h
src/mavlink/include/mavlink/v2.0/message_definitions/: piloting.xml
src/mavlink/include/mavlink/v2.0/minimal/: version.h
src/mavlink/include/mavlink/v2.0/piloting/: mavlink.h  mavlink_msg_alarm_list_ack.h  mavlink_msg_alarm_list_count.h  mavlink_msg_alarm_list_item.h  mavlink_msg_alarm_list_read.h  mavlink_msg_alarm_list_request.h  mavlink_msg_alarm_status.h  mavlink_msg_check_list_ack.h  mavlink_msg_check_list_count.h  mavlink_msg_check_list_item.h  mavlink_msg_check_list_read.h  mavlink_msg_check_list_request.h  mavlink_msg_hl_action_list_ack.h  mavlink_msg_hl_action_list_count.h  mavlink_msg_hl_action_list_item.h  mavlink_msg_hl_action_list_read.h  mavlink_msg_hl_action_list_request.h  mavlink_msg_inspection_tasks_ack.h  mavlink_msg_inspection_tasks_count.h  mavlink_msg_inspection_tasks_current_item.h  mavlink_msg_inspection_tasks_item.h  mavlink_msg_inspection_tasks_item_reached.h  mavlink_msg_inspection_tasks_read.h  mavlink_msg_inspection_tasks_request.h  mavlink_msg_inspection_tasks_set_current_item.h  mavlink_msg_text_status.h  mavlink_msg_waypoint_list_ack.h  mavlink_msg_waypoint_list_count.h  mavlink_msg_waypoint_list_current_item.h  mavlink_msg_waypoint_list_item.h  mavlink_msg_waypoint_list_item_reached.h  mavlink_msg_waypoint_list_read.h  mavlink_msg_waypoint_list_request.h  mavlink_msg_waypoint_list_set_current_item.h  piloting.h  testsuite.h  version.h
src/plugins/: CMakeLists.txt
src/plugins/alarm/: CMakeLists.txt  alarm.cpp  alarm_impl.cpp  alarm_impl.h
src/plugins/alarm/include/plugins/alarm/: alarm.h
src/plugins/alarm_robotic_vehicle/: CMakeLists.txt  alarm_robotic_vehicle.cpp  alarm_robotic_vehicle_impl.cpp  alarm_robotic_vehicle_impl.h
src/plugins/alarm_robotic_vehicle/include/plugins/alarm_robotic_vehicle/: alarm_robotic_vehicle.h
src/plugins/checklist/: CMakeLists.txt  checklist.cpp  checklist_impl.cpp  checklist_impl.h
src/plugins/checklist/include/plugins/checklist/: checklist.h
src/plugins/checklist_robotic_vehicle/: CMakeLists.txt  checklist_robotic_vehicle.cpp  checklist_robotic_vehicle_impl.cpp  checklist_robotic_vehicle_impl.h
src/plugins/checklist_robotic_vehicle/include/plugins/checklist_robotic_vehicle/: checklist_robotic_vehicle.h
src/plugins/command/: CMakeLists.txt  command.cpp  command_impl.cpp  command_impl.h
src/plugins/command/include/plugins/command/: command.h
src/plugins/command_robotic_vehicle/: CMakeLists.txt  command_robotic_vehicle.cpp  command_robotic_vehicle_impl.cpp  command_robotic_vehicle_impl.h
src/plugins/command_robotic_vehicle/include/plugins/command_robotic_vehicle/: command_robotic_vehicle.h
src/plugins/hl_action/: CMakeLists.txt  hl_action.cpp  hl_action_impl.cpp  hl_action_impl.h
src/plugins/hl_action/include/plugins/hl_action/: hl_action.h
src/plugins/hl_action_robotic_vehicle/: CMakeLists.txt  hl_action_robotic_vehicle.cpp  hl_action_robotic_vehicle_impl.cpp  hl_action_robotic_vehicle_impl.h
src/plugins/hl_action_robotic_vehicle/include/plugins/hl_action_robotic_vehicle/: hl_action_robotic_vehicle.h
src/plugins/inspection/: CMakeLists.txt  inspection.cpp  inspection_impl.cpp  inspection_impl.h
src/plugins/inspection/include/plugins/inspection/: inspection.h
src/plugins/inspection_robotic_vehicle/: CMakeLists.txt  inspection_robotic_vehicle.cpp  inspection_robotic_vehicle_impl.cpp  inspection_robotic_vehicle_impl.h
src/plugins/telemetry/: CMakeLists.txt  telemetry.cpp  telemetry_impl.cpp  telemetry_impl.h
src/plugins/telemetry/include/plugins/telemetry/: telemetry.h
src/plugins/telemetry_robotic_vehicle/: CMakeLists.txt  telemetry_robotic_vehicle.cpp  telemetry_robotic_vehicle_impl.cpp  telemetry_robotic_vehicle_impl.h
(+2 files in other folders)
